language/tests/run_pass/region_partition_dynamic.lg
-- Copyright 2015 Stanford University
--
-- Licensed under the Apache License, Version 2.0 (the "License");
-- you may not use this file except in compliance with the License.
-- You may obtain a copy of the License at
--
--     http://www.apache.org/licenses/LICENSE-2.0
--
-- Unless required by applicable law or agreed to in writing, software
-- distributed under the License is distributed on an "AS IS" BASIS,
-- WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-- See the License for the specific language governing permissions and
-- limitations under the License.

import "legion"

local c = legionlib.c

task f()
  var r = region(int, 5)
  var rc = c.legion_coloring_create()
  c.legion_coloring_ensure_color(rc, 0)
  c.legion_coloring_ensure_color(rc, 1)
  c.legion_coloring_ensure_color(rc, 2)
  var p = partition(disjoint, r, rc)
  c.legion_coloring_destroy(rc)

  for i = 0, 3 do
    var ri = p[i]
    var x = new(ptr(int, ri))
    @x = i
  end

  var s = 0
  for i = 0, 3 do
    var ri = p[i]
    for x in ri do
      s += @x
    end
  end

  return s
end

task main()
  legionlib.assert(f() == 3)
end
legionlib.start(main)
