language/tests/compile_fail/type_mismatch_partition3.lg
-- Copyright 2015 Stanford University
--
-- Licensed under the Apache License, Version 2.0 (the "License");
-- you may not use this file except in compliance with the License.
-- You may obtain a copy of the License at
--
--     http://www.apache.org/licenses/LICENSE-2.0
--
-- Unless required by applicable law or agreed to in writing, software
-- distributed under the License is distributed on an "AS IS" BASIS,
-- WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-- See the License for the specific language governing permissions and
-- limitations under the License.

-- fails-with:
-- type mismatch in argument 1: expected disjoint or aliased but got int32

import "legion"

task f() : int
  var r = region(int, 5)
  var c : legionlib.c.legion_coloring_t
  var p = partition(int, r, c)
end
f:compile()
